<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/january"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="@string/january_number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/february"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/february"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="@string/february_number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/january"
        app:layout_constraintRight_toLeftOf="@+id/march"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/march"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="@string/march_number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/february"
        app:layout_constraintRight_toLeftOf="@+id/april"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/april"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="@string/april_number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/march"
        app:layout_constraintRight_toLeftOf="@+id/may"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/may"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="@string/may_number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/april"
        app:layout_constraintRight_toLeftOf="@+id/june"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/june"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="@string/june_number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/may"
        app:layout_constraintRight_toLeftOf="@+id/july"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/july"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="@string/july_number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/june"
        app:layout_constraintRight_toLeftOf="@+id/august"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/august"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="@string/august_number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/july"
        app:layout_constraintRight_toLeftOf="@+id/september"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/september"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="@string/september_number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/august"
        app:layout_constraintRight_toLeftOf="@+id/october"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/october"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="@string/october_number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/september"
        app:layout_constraintRight_toLeftOf="@+id/november"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/november"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="@string/november_number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/october"
        app:layout_constraintRight_toLeftOf="@+id/december"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/december"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="@string/december_number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/november"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>