<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/ph_zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle"
        android:backgroundTint="#EB1E23"
        android:gravity="center"
        android:text="@string/zero"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/ph_one"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ph_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle"
        android:backgroundTint="#F06722"
        android:gravity="center"
        android:text="@string/one"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/ph_zero"
        app:layout_constraintRight_toLeftOf="@+id/ph_two"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ph_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle"
        android:backgroundTint="#F68C3B"
        android:gravity="center"
        android:text="@string/two"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/ph_one"
        app:layout_constraintRight_toLeftOf="@+id/ph_three"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ph_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle"
        android:backgroundTint="#fdbd33"
        android:gravity="center"
        android:text="@string/three"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/ph_two"
        app:layout_constraintRight_toLeftOf="@+id/ph_four"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ph_four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle"
        android:backgroundTint="#fff341"
        android:gravity="center"
        android:text="@string/four"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/ph_three"
        app:layout_constraintRight_toLeftOf="@+id/ph_five"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ph_five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle"
        android:backgroundTint="#cadc30"
        android:gravity="center"
        android:text="@string/five"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/ph_four"
        app:layout_constraintRight_toLeftOf="@+id/ph_six"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ph_six"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle"
        android:backgroundTint="#7bc24d"
        android:gravity="center"
        android:text="@string/six"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/ph_five"
        app:layout_constraintRight_toLeftOf="@+id/ph_seven"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ph_seven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle"
        android:backgroundTint="#0ab16d"
        android:gravity="center"
        android:text="@string/seven"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/ph_six"
        app:layout_constraintRight_toLeftOf="@+id/ph_eight"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ph_eight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle"
        android:backgroundTint="#03a7ce"
        android:gravity="center"
        android:text="@string/eight"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/ph_seven"
        app:layout_constraintRight_toLeftOf="@+id/ph_nine"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ph_nine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle"
        android:backgroundTint="#4974b9"
        android:gravity="center"
        android:text="@string/nine"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/ph_eight"
        app:layout_constraintRight_toLeftOf="@+id/ph_ten"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ph_ten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle"
        android:backgroundTint="#32479b"
        android:gravity="center"
        android:text="@string/ten"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/ph_nine"
        app:layout_constraintRight_toLeftOf="@+id/ph_eleven"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ph_eleven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle"
        android:backgroundTint="#5e3e96"
        android:gravity="center"
        android:text="@string/eleven"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/ph_ten"
        app:layout_constraintRight_toLeftOf="@id/ph_twelve"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ph_twelve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle"
        android:backgroundTint="#813192"
        android:gravity="center"
        android:text="@string/twelve"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/ph_eleven"
        app:layout_constraintRight_toLeftOf="@id/ph_thirteen"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ph_thirteen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle"
        android:backgroundTint="#945ca5"
        android:gravity="center"
        android:text="@string/thirteen"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/ph_twelve"
        app:layout_constraintRight_toLeftOf="@id/ph_fourteen"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ph_fourteen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle"
        android:backgroundTint="#b866a7"
        android:gravity="center"
        android:text="@string/fourteen"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/ph_thirteen"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>